tests/ui/consts/const-eval/c-variadic-fail.stderr
error[E0080]: more C-variadic arguments read than were passed
  --> $DIR/c-variadic-fail.rs:28:13
   |
LL |     const { read_n::<1>() }
   |             ^^^^^^^^^^^^^ evaluation of `read_too_many::{constant#2}` failed inside this call
   |
note: inside `read_n::<1>`
  --> $DIR/c-variadic-fail.rs:16:17
   |
LL |         let _ = ap.next_arg::<i32>();
   |                 ^^^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:28:5
   |
LL |     const { read_n::<1>() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:28:5
   |
LL |     const { read_n::<1>() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: more C-variadic arguments read than were passed
  --> $DIR/c-variadic-fail.rs:32:13
   |
LL |     const { read_n::<2>(1) }
   |             ^^^^^^^^^^^^^^ evaluation of `read_too_many::{constant#3}` failed inside this call
   |
note: inside `read_n::<2>`
  --> $DIR/c-variadic-fail.rs:16:17
   |
LL |         let _ = ap.next_arg::<i32>();
   |                 ^^^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:32:5
   |
LL |     const { read_n::<2>(1) }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:32:5
   |
LL |     const { read_n::<2>(1) }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `-1_i32` cannot be represented by type `u32`
  --> $DIR/c-variadic-fail.rs:72:13
   |
LL |     const { read_as::<u32>(-1i32) };
   |             ^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#12}` failed inside this call
   |
note: inside `read_as::<u32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<u32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:72:5
   |
LL |     const { read_as::<u32>(-1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:72:5
   |
LL |     const { read_as::<u32>(-1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `-2147483648_i32` cannot be represented by type `u32`
  --> $DIR/c-variadic-fail.rs:74:13
   |
LL |     const { read_as::<u32>(i32::MIN) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#13}` failed inside this call
   |
note: inside `read_as::<u32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<u32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:74:5
   |
LL |     const { read_as::<u32>(i32::MIN) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:74:5
   |
LL |     const { read_as::<u32>(i32::MIN) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `4294967295_u32` cannot be represented by type `i32`
  --> $DIR/c-variadic-fail.rs:76:13
   |
LL |     const { read_as::<i32>(u32::MAX) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#14}` failed inside this call
   |
note: inside `read_as::<i32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:76:5
   |
LL |     const { read_as::<i32>(u32::MAX) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:76:5
   |
LL |     const { read_as::<i32>(u32::MAX) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `2147483648_u32` cannot be represented by type `i32`
  --> $DIR/c-variadic-fail.rs:78:13
   |
LL |     const { read_as::<i32>(i32::MAX as u32 + 1) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#15}` failed inside this call
   |
note: inside `read_as::<i32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:78:5
   |
LL |     const { read_as::<i32>(i32::MAX as u32 + 1) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:78:5
   |
LL |     const { read_as::<i32>(i32::MAX as u32 + 1) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `18446744073709551615_u64` cannot be represented by type `i64`
  --> $DIR/c-variadic-fail.rs:80:13
   |
LL |     const { read_as::<i64>(u64::MAX) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#16}` failed inside this call
   |
note: inside `read_as::<i64>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i64>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:80:5
   |
LL |     const { read_as::<i64>(u64::MAX) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:80:5
   |
LL |     const { read_as::<i64>(u64::MAX) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg value mismatch: value `9223372036854775808_u64` cannot be represented by type `i64`
  --> $DIR/c-variadic-fail.rs:82:13
   |
LL |     const { read_as::<i64>(i64::MAX as u64 + 1) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#17}` failed inside this call
   |
note: inside `read_as::<i64>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i64>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:82:5
   |
LL |     const { read_as::<i64>(i64::MAX as u64 + 1) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:82:5
   |
LL |     const { read_as::<i64>(i64::MAX as u64 + 1) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `i32` is incompatible with next argument of type `u64`
  --> $DIR/c-variadic-fail.rs:85:13
   |
LL |     const { read_as::<i32>(1u64) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#18}` failed inside this call
   |
note: inside `read_as::<i32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:85:5
   |
LL |     const { read_as::<i32>(1u64) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:85:5
   |
LL |     const { read_as::<i32>(1u64) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `f64` is incompatible with next argument of type `i32`
  --> $DIR/c-variadic-fail.rs:88:13
   |
LL |     const { read_as::<f64>(1i32) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_numeric::{constant#19}` failed inside this call
   |
note: inside `read_as::<f64>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<f64>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:88:5
   |
LL |     const { read_as::<f64>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:88:5
   |
LL |     const { read_as::<f64>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `*const u16` is incompatible with next argument of type `*const c_void`
  --> $DIR/c-variadic-fail.rs:111:13
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<c_void>()) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_pointer::{constant#12}` failed inside this call
   |
note: inside `read_as::<*const u16>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<*const u16>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:111:5
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<c_void>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:111:5
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<c_void>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `*const c_void` is incompatible with next argument of type `*const u16`
  --> $DIR/c-variadic-fail.rs:113:13
   |
LL |     const { read_as::<*const c_void>(std::ptr::dangling::<u16>()) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_pointer::{constant#13}` failed inside this call
   |
note: inside `read_as::<*const c_void>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<*const c_void>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:113:5
   |
LL |     const { read_as::<*const c_void>(std::ptr::dangling::<u16>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:113:5
   |
LL |     const { read_as::<*const c_void>(std::ptr::dangling::<u16>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `*const u16` is incompatible with next argument of type `*const i32`
  --> $DIR/c-variadic-fail.rs:115:13
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<i32>()) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_pointer::{constant#14}` failed inside this call
   |
note: inside `read_as::<*const u16>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<*const u16>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:115:5
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<i32>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:115:5
   |
LL |     const { read_as::<*const u16>(std::ptr::dangling::<i32>()) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `*const u8` is incompatible with next argument of type `usize`
  --> $DIR/c-variadic-fail.rs:118:13
   |
LL |     const { read_as::<*const u8>(1usize) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast_pointer::{constant#15}` failed inside this call
   |
note: inside `read_as::<*const u8>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.next_arg::<T>()
   |     ^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<*const u8>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:118:5
   |
LL |     const { read_as::<*const u8>(1usize) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:118:5
   |
LL |     const { read_as::<*const u8>(1usize) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: memory access failed: ALLOC0 has been freed, so this pointer is dangling
  --> $DIR/c-variadic-fail.rs:131:13
   |
LL |             ap.next_arg::<i32>();
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `use_after_free::{constant#0}` failed inside this call
   |
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:127:5
   |
LL | /     const {
LL | |         unsafe {
LL | |             let ap = helper(1, 2, 3);
LL | |             let mut ap = std::mem::transmute::<_, VaList>(ap);
...  |
LL | |     };
   | |_____^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:127:5
   |
LL | /     const {
LL | |         unsafe {
LL | |             let ap = helper(1, 2, 3);
LL | |             let mut ap = std::mem::transmute::<_, VaList>(ap);
...  |
LL | |     };
   | |_____^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC1 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:153:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_drop::{constant#0}` failed inside this call
   |
note: inside `manual_copy_drop::helper`
  --> $DIR/c-variadic-fail.rs:150:9
   |
LL |         drop(ap);
   |         ^^^^^^^^
note: inside `std::mem::drop::<VaList<'_>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `std::ptr::drop_glue::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:153:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:153:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC2 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:169:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_forget::{constant#0}` failed inside this call
   |
note: inside `manual_copy_forget::helper`
  --> $DIR/c-variadic-fail.rs:166:9
   |
LL |         drop(ap);
   |         ^^^^^^^^
note: inside `std::mem::drop::<VaList<'_>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `std::ptr::drop_glue::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:169:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:169:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC3 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:182:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_read::{constant#0}` failed inside this call
   |
note: inside `manual_copy_read::helper`
  --> $DIR/c-variadic-fail.rs:179:17
   |
LL |         let _ = ap.next_arg::<i32>();
   |                 ^^^^^^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::next_arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:182:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:182:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: pointer not dereferenceable: pointer must point to some allocation, but got null pointer
  --> $DIR/c-variadic-fail.rs:190:5
   |
LL |     }
   |     ^ evaluation of `drop_of_invalid::{constant#0}` failed inside this call
   |
note: inside `std::ptr::drop_glue::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:187:5
   |
LL | /     const {
LL | |         let mut invalid: MaybeUninit<VaList> = MaybeUninit::zeroed();
LL | |         let ap = unsafe { invalid.assume_init() };
LL | |     }
   | |_____^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:187:5
   |
LL | /     const {
LL | |         let mut invalid: MaybeUninit<VaList> = MaybeUninit::zeroed();
LL | |         let ap = unsafe { invalid.assume_init() };
LL | |     }
   | |_____^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0080`.
